--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,7 +10,8 @@ set(MAIN_SOURCES
 
 add_subdirectory(basic)  # Make sure this line is before add_executable(main ...)
 add_subdirectory(gr)  # Add this line to include gr directory
+add_subdirectory(flute)  # Add this line to include flute directory
 
 add_executable(main ${MAIN_SOURCES})
-target_include_directories(main PRIVATE basic gr)  # Add gr to the include directories
-target_link_libraries(main PRIVATE basic gr stdc++fs)  # Add gr to the linked libraries
+target_include_directories(main PRIVATE basic gr flute)  # Add flute to the include directories
+target_link_libraries(main PRIVATE basic gr stdc++fs flute)  # Add flute to the linked libraries
